# standards

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.sh
.github/workflows/: build.yml
cmake/: googletest.cmake
config/: core.cmake  setup.sh
doc/: preamble.cpp  preamble.txt
doc/stat/: fourth-moment.bbl  fourth-moment.tex  plot-bias-b.gp  plot-bias-n.gp  plot-eq1-b.gp  plot-eq1-n.gp  plot-eq2-b.gp  plot-eq2-n.gp  plot-eq3-b.gp  plot-eq3-n.gp  plot-eq4-b.gp  plot-eq4-n.gp  plot-eq5-b.gp  plot-eq5-n.gp  plot-eq6-b.gp  plot-eq6-n.gp  plot-eq7-b.gp  plot-eq7-n.gp
example/: CMakeLists.txt
example/integral/: CMakeLists.txt  simpson_1d.cpp  simpson_2d.cpp
example/integrator/: CMakeLists.txt  (+9 more)
include/: CMakeLists.txt
integral/: simpson.hpp
integrator/: CMakeLists.txt  harmonic_main.hpp  harmonic_rk4.cpp  integrator.hpp
lattice/: simple_cubic.hpp  square.hpp  triangular.hpp
log_sum_exp/: CMakeLists.txt  exp_number.hpp  exp_number.op
math/: power.hpp
ode/: harmonic_rk2.cpp  harmonic_rk3.cpp  harmonic_rk4.op  integrator.hpp
optimize/: CMakeLists.txt  bisection.cpp  bisection.hpp  bisection.op  golden_section.cpp  golden_section.hpp  golden_section.op  mccormick.hpp  nelder_mead.cpp  nelder_mead.hpp  nelder_mead.op  rastrigin.hpp
standards/: accumulator.hpp  bisection.hpp  cubic.hpp  exp_number.hpp  fully_connected.hpp  integrator.hpp  lattice.hpp  nelder_mead.hpp  polyak_ruppert.hpp  power.hpp  rastrigin.hpp  robbins_monro.hpp  square.hpp  timer.hpp  triangular.hpp
stat/: accumulator.cpp  accumulator.hpp  bernoulli_distribution.cpp  bernoulli_distribution.hpp  bernoulli_distribution.op  binomial_distribution.cpp  binomial_distribution.op  cumulant.hpp  moment.hpp  normal_distribution.cpp  normal_distribution.hpp  normal_distribution.op  test.hpp
test/: CMakeLists.txt  bisection.cpp  chain.cpp  cubic.cpp  exp_number.cpp  golden_section.cpp  nelder_mead.cpp  newton.cpp  polyak_ruppert.cpp  power.cpp  robbins_monro.cpp  simpson.cpp  square.cpp  timer.cpp  triangular.cpp
test/integral/: simpson.cpp
test/lattice/: CMakeLists.txt  chain.cpp  cubic.cpp  fully_connected.cpp  simple_cubic.cpp  simple_cubic.op  square.cpp
test/lse/: exp_number.cpp
test/ode/: CMakeLists.txt  harmonic_euler.cpp  harmonic_rk2.cpp  harmonic_rk2.op  harmonic_rk3.cpp  harmonic_rk4.cpp
test/optimize/: bisection.cpp  bisection.op  golden_section.cpp  nelder_mead.cpp  nelder_mead.op
test/stat/: CMakeLists.txt  normal_distribution.op  vector.cpp  vector.op
tool/: setup.sh
(+36 files in other folders)
